--- a/work03/index.html
+++ b/work03/index.html
@@ -13,11 +13,9 @@
 <body>
 
      <!--fern-->
-     <a href="images/c1.jpeg" target="_blank"><img src="images/hunsen.jpg"></a> 
+     <a href="images/c1.jpeg" target="_blank"><img src="images/cafe.jpg"></a> 
      <!--fern-->
-     <a href="images/c2.jpeg" target="_blank"><img src="images/hunsen.jpg"></a> 
-     <!--fern-->
-     <a href="images/c3.jpeg" target="_blank"><img src="images/hunsen.jpg"></a> 
+     
 
 
 </body>
