--- a/work03/index.html
+++ b/work03/index.html
@@ -13,7 +13,7 @@
 <body>
 
      <!--fern-->
-     <a href="images/c1.jpeg" target="_blank"><img src="images/cafe.jpg"></a> 
+     <img src="images/cafe.jpg">
      <!--fern-->
      
 
